hard-gists/2972ba872df05cb5f0c3/run.log
=== Docker Run Log for 2972ba872df05cb5f0c3 ===
Started at: Mi 29. Okt 13:22:27 CET 2025

[2025-10-29 13:22:28] START: Running container for 2972ba872df05cb5f0c3
[2025-10-29 13:22:28] SUCCESS: Container fd9c556487ef62fb9cb332ebe573fc76fac7c8e4ab83ece5b8faa42ab3508fa2 started for 2972ba872df05cb5f0c3
=== Container logs for 2972ba872df05cb5f0c3 ===
  File "/snippet.py", line 17
    print ppth
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2972ba872df05cb5f0c3 ===
[2025-10-29 13:22:30] INFO: Container fd9c556487ef62fb9cb332ebe573fc76fac7c8e4ab83ece5b8faa42ab3508fa2 has stopped
